changes to the exciton code

--- a/demo_exciton.ipynb
+++ b/demo_exciton.ipynb
@@ -9,24 +9,36 @@
    "source": [
     "import numpy as np\n",
     "import itertools\n",
+    "from scipy.optimize import minimize\n",
+    "from scipy.integrate import quad\n",
     "\n",
     "# ------------------------\n",
     "# Parameters\n",
     "# ------------------------\n",
     "degree_theta = 1.0  # Example twist angle (deg)\n",
     "\n",
+    "# Fundamental constants\n",
     "hbar = 0.6582  # (eV*fs)\n",
     "m0 = 5.68568  # (eV fs² nm⁻²)\n",
+    "eps0 = 5.526349406e-2 # Vacuum permittivity (e0²/eV/nm)\n",
+    "e0 = 1.0 # Elementary charge\n",
     "\n",
-    "me = 0.43 * m0\n",
+    "# Parameters (from Das Sarma's PRL)\n",
+    "me = 0.80 * m0 # Electron mass\n",
+    "mh = 0.43 * m0 # Hole mass\n",
     "phi = 128 * (np.pi / 180)\n",
-    "V0 = 0.009\n",
-    "w = 0.018\n",
-    "a = 0.3317\n",
-    "theta = degree_theta * (np.pi / 180)\n",
+    "eps = 3.8 # Why?\n",
+    "d = 0.67 # Interlayer distance (nm)\n",
     "\n",
-    "# Moiré lattice constant\n",
-    "aM = a / (2.0 * np.sin(0.5 * theta))\n",
+    "# Moiré constants\n",
+    "V0 = 0.009 # Moiré potential\n",
+    "w = 0.018 # Hopping strength\n",
+    "theta = degree_theta * (np.pi / 180) # Degree of twist in radians\n",
+    "a = 0.3317 # Lattice constant\n",
+    "K0 = (4*np.pi)/(3*a)\n",
+    "aM = a / (2.0 * np.sin(0.5 * theta)) # Moiré lattice constant\n",
+    "phi_m = (128*np.pi)/180\n",
+    "ktheta = 2.0 * K0 * np.sin(0.5 * theta)\n",
     "\n",
     "# g-vectors of mBZ\n",
     "g0 = (4 * np.pi) / (np.sqrt(3) * aM)\n",
@@ -37,18 +49,122 @@
     "g1 = gvecs[0]\n",
     "g2 = gvecs[1]\n",
     "\n",
+    "# Exciton parameters\n",
+    "Mx = mh + me\n",
+    "mred = (mh*me)/Mx\n",
+    "alpha_e = me/Mx\n",
+    "\n",
     "# Moiré shells\n",
-    "Nshells = 5\n",
+    "Nshells = 4\n",
     "Nzf = (2 * Nshells + 1) ** 2\n",
     "map_zf_idx = list(itertools.product(range(-Nshells, Nshells + 1),\n",
     "                                    range(-Nshells, Nshells + 1)))\n",
     "Nbands = Nzf * 2  # 2 layers \n",
+    "\n",
+    "def exciton_states_variational(l):\n",
+    "    \"\"\"\n",
+    "    Compute exciton binding energy and Bohr radius variationally\n",
+    "    using a hydrogenic ansatz.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    l : int\n",
+    "        Hole layer index (controls separation distance).\n",
+    "    \n",
+    "    Returns\n",
+    "    -------\n",
+    "    E_min : float\n",
+    "        Minimum binding energy.\n",
+    "    a_opt : float\n",
+    "        Optimal Bohr radius.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def variational_energy(a):\n",
+    "        # Kinetic term\n",
+    "        kin = hbar**2 / (2.0 * mred * a**2)\n",
+    "\n",
+    "        # Potential term: numerical integral\n",
+    "        integrand = lambda r: r * np.exp(-2*r/a) / np.sqrt(r**2 + (d*l)**2)\n",
+    "        integral, _ = quad(integrand, 0, 100*a, epsrel=1e-9)\n",
+    "\n",
+    "        pot = - integral * 2*np.pi * 2/(np.pi*a**2) * e0**2/(4*np.pi*eps*eps0)\n",
+    "\n",
+    "        return kin + pot\n",
+    "\n",
+    "    # Minimize with Nelder–Mead\n",
+    "    result = minimize(lambda x: variational_energy(x[0]), \n",
+    "                      x0=[1.0],\n",
+    "                      bounds=[(0.5, 5.0)],\n",
+    "                      tol=1e-12,\n",
+    "                      method='Nelder-Mead',\n",
+    "                      options={'maxiter': 100})\n",
+    "\n",
+    "    E_min = result.fun\n",
+    "    a_opt = result.x[0]\n",
+    "\n",
+    "    return E_min, a_opt\n",
+    "\n",
+    "# def initialize_BZ(theta: float):\n",
+    "#     \"\"\"\n",
+    "#     Initialize Brillouin zone vectors.\n",
+    "#     theta is in radians.\n",
+    "#     Returns (kappa1, kappa2, ktheta, g1, g2, g0).\n",
+    "#     \"\"\"\n",
+    "#     ktheta = 2.0 * K0 * np.sin(0.5 * theta)\n",
+    "\n",
+    "#     # kappa points of mBZ\n",
+    "#     kappa1 = ktheta * np.array([0.5 * np.sqrt(3.0), -0.5], dtype=float)\n",
+    "#     kappa2 = ktheta * np.array([0.5 * np.sqrt(3.0),  0.5], dtype=float)\n",
+    "\n",
+    "#     # g-vectors of mBZ\n",
+    "#     g0 = ktheta * np.sqrt(3.0)\n",
+    "#     g1 = g0 * np.array([1.0, 0.0], dtype=float)\n",
+    "#     g2 = g0 * np.array([0.5, 0.5 * np.sqrt(3.0)], dtype=float)\n",
+    "\n",
+    "#     # moiré lattice constant (optional print like in Julia)\n",
+    "#     aM = a / (2.0 * np.sin(0.5 * theta))\n",
+    "#     print(aM)\n",
+    "\n",
+    "#     return kappa1, kappa2, ktheta, g1, g2, g0\n",
+    "\n",
+    "\n",
+    "def exciton_matrix_elements(a_l, BZparams): #TODO, check here for the different form factors\n",
+    "    \"\"\"\n",
+    "    Compute exciton matrix elements for moiré potential and tunneling.\n",
+    "    a_l: array-like of length 2 (e.g., [a_l1, a_l2])\n",
+    "    BZparams: tuple returned by initialize_BZ\n",
+    "              (kappa1, kappa2, ktheta, g1, g2, g0)\n",
+    "    Returns numpy array [U_mx_1, U_mx_2, t_x].\n",
+    "    \"\"\"\n",
+    "    #kappa1, kappa2, ktheta, g1, g2, g0 = BZparams #K point of layer 1 and 2, rotation and vectors for mBZ\n",
+    "    a_l = np.asarray(a_l, dtype=float)\n",
+    "\n",
+    "    # The form factor takes into account the distnace between the electron and the hole in our TMD layers\n",
+    "    # this makes it so that the excitons in layer 1 and 2 experience different potential, hence we need this form factor\n",
+    "    FF11 = (1.0 + (0.5 * a_l[0] * alpha_e * g0)**2)**(-1.5) # Form factor for layer 1 exciton\n",
+    "    FF22 = (1.0 + (0.5 * a_l[1] * alpha_e * g0)**2)**(-1.5) # Form factor for layer 2 exciton\n",
+    "\n",
+    "    xi = 4.0 * a_l[0] * a_l[1] / (a_l[0] + a_l[1])**2 #Not sure what this is \n",
+    "    FF12 = xi * (1.0 + xi * (0.5 * np.sqrt(a_l[0] * a_l[1]) * alpha_e * ktheta)**2)**(-1.5) # The potential between layers 1 and 2\n",
+    "\n",
+    "    U_mx_1 = -V0 * FF11\n",
+    "    U_mx_2 = -V0 * FF22\n",
+    "    t_x    = -w * FF12\n",
+    "\n",
+    "    matrix_elements = np.array([U_mx_1, U_mx_2, t_x], dtype=float)\n",
+    "\n",
+    "    print(f\"FF11: {FF11}, FF22: {FF22}, FF12: {FF12}\")\n",
+    "    return matrix_elements\n",
     "\n",
     "# ------------------------\n",
     "# Functions (unchanged logic)\n",
     "# ------------------------\n",
     "def compute_H(k):\n",
     "    H = np.zeros((Nbands, Nbands), dtype=complex)\n",
+    "\n",
+    "    Ktop \n",
+    "    Kbot\n",
+    "\n",
     "\n",
     "    for n1 in range(Nzf):\n",
     "        n11, n12 = map_zf_idx[n1]\n",
@@ -98,9 +214,7 @@
     "                H[i2_t, i1_t] = -V0 * np.exp(-1j * phi)\n",
     "                H[i2_b, i1_b] = -V0 * np.exp(1j * phi)\n",
     "                H[i2_b, i1_t] = w\n",
-    "\n",
     "    return H\n",
-    "\n",
     "\n",
     "def solve_H(k):\n",
     "    H = compute_H(k)\n",
